[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Main Menu/Title-background.png" type="Texture" id=2]
[ext_resource path="res://Main Menu/Hand-cursor.png" type="Texture" id=3]
[ext_resource path="res://Main Menu/flagBrazil.png" type="Texture" id=4]
[ext_resource path="res://Main Menu/flagUS.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]

hinting = 2
font_path = "res://Main Menu/Fonts/MyriadPro-CondIt.otf"

[sub_resource type="DynamicFont" id=2]

size = 100
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=3]

hinting = 2
font_path = "res://Main Menu/Fonts/MyriadPro-CondIt.otf"

[sub_resource type="DynamicFont" id=4]

size = 100
use_mipmaps = false
use_filter = false
font_data = SubResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=5]

hinting = 2
font_path = "res://Main Menu/Fonts/Myriad Pro Light Italic.otf"

[sub_resource type="DynamicFont" id=6]

size = 50
use_mipmaps = false
use_filter = false
font_data = SubResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="MainMenu" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="BackgroundMenu" type="Sprite" parent="." index="0"]

position = Vector2( 967.509, 554.42 )
texture = ExtResource( 2 )

[node name="HandCursor" type="Sprite" parent="." index="1"]

position = Vector2( 346.265, 570.344 )
texture = ExtResource( 3 )

[node name="Start" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 452.0
margin_top = 528.0
margin_right = 620.0
margin_bottom = 628.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Start"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "custom_fonts" ]

[node name="PositionStart" type="Position2D" parent="Start" index="0"]

position = Vector2( -66.482, 43.2133 )

[node name="Credits" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 435.0
margin_top = 667.0
margin_right = 714.0
margin_bottom = 767.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Credits"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "custom_fonts" ]

[node name="PositionCredits" type="Position2D" parent="Credits" index="0"]

position = Vector2( -64.9945, 38.2853 )
_sections_unfolded = [ "Transform" ]

[node name="Exit" type="Label" parent="." index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 442.0
margin_top = 804.0
margin_right = 585.0
margin_bottom = 904.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Exit"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "custom_fonts" ]

[node name="PositionExit" type="Position2D" parent="Exit" index="0"]

position = Vector2( -75.5623, 49.4099 )

[node name="LanguageChoose" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1388.0
margin_top = 52.0
margin_right = 1590.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Language:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="LanguageButton" type="CanvasLayer" parent="." index="7"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="buttonBR" type="TextureButton" parent="LanguageButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1608.0
margin_top = 54.0
margin_right = 1693.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Size Flags", "Textures", "Theme", "Visibility" ]

[node name="buttonUS" type="TextureButton" parent="LanguageButton" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1712.0
margin_top = 54.0
margin_right = 1799.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
_sections_unfolded = [ "Textures", "Visibility" ]

[connection signal="mouse_entered" from="Start" to="." method="_on_Start_mouse_entered"]

[connection signal="mouse_entered" from="Credits" to="." method="_on_Credits_mouse_entered"]

[connection signal="mouse_entered" from="Exit" to="." method="_on_Exit_mouse_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="button_down" from="LanguageButton/buttonBR" to="." method="_on_buttonBR_button_down"]

[connection signal="button_down" from="LanguageButton/buttonUS" to="." method="_on_buttonUS_button_down"]


